--- a/.github/workflows/cloudrundeploy.yml
+++ b/.github/workflows/cloudrundeploy.yml
@@ -2,9 +2,9 @@ name: CICD
 
 on:
    push:
-    branches: [ master, main ]
+    branches: [ main ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ main ]
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
