--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-
+.keys/
 # TypeScript v1 declaration files
 typings/
 
@@ -74,3 +74,4 @@ typings/
 
 # FuseBox cache
 .fusebox/
+
